Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.1.1, 5.2.0
-
Fix Version/s: 5.2.1
-
Component/s: Quick: Layouts
-
Labels:None
-
Environment:Windows 7, msvc2010, x86, ANGLE
-
Commits:17788ca8f0d6fe4fb0d03e99e34ed667fde54379
Description
I placed layout into loader and made loader's height depend on loaded component. The red rectangle should be a square, due to it's implicit size, but it has wrong width.